fixed overflow css hickup

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body, html {
     height: 100%;
     background-color: #eee;
     font-family: Roboto;
-
+    overflow-x: hidden;
 }
 *{
     padding:0;
@@ -109,7 +109,7 @@ body, html {
 
 ul {
     list-style: none;
-    padding: 0 30px;
+    padding: 0 23px;
     font-size: 18px;
 }
 
